# vostok

./: .dir-locals.el  .editorconfig  .gitignore  CMakeLists.txt  README.md
include/vostok/: application.hxx
src/: application.cxx  main.cxx
